--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	    <meta charset="utf-8">
 	    
 	     <!-- ABOUT this page -->
-	    <title>Replace Title</title>
-	    <meta name="description" content="This page contains, etc...">
-	    <meta name="keywords" content="keyword1, keyword1, keyword1, etc..."  />
-	    <meta name="author" content="Your Name">
+	    <title>Touch Agency</title>
+	    <meta name="description" content="This page is a responsive website of the brand Touch Agency.">
+	    <meta name="keywords" content="touch, agency, responsive, web, design, michellejames"  />
+	    <meta name="author" content="Michelle James">
 	    
 	    <!--  VIEWPORT optimized specific to content -->
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
